# surfwinddata

./: .dockerignore  .env.example  .gitignore  Briefing.md  Caddyfile  DEPLOY-VERCEL.md  Dockerfile  README.md  alembic.ini  app.js  docker-compose.prod.yml  docker-compose.yml  env.prod.example  fetch_history.py  index.html  index.js  pyproject.toml  requirements.txt  spot.html  spot.js  styles.css  vercel.json
.claude/: settings.local.json
Konzept und Prompts/: Gesamtkonzept.md  Spezifikation_v2_und_Sprintplan.md  sprint_1_datengeruest.md  sprint_2_era5_pipeline.md  sprint_3_openmeteo_live.md  sprint_4_score_engine.md  sprint_5_such_kern.md  sprint_6_offene_achsen_reverse.md  sprint_7_aehnlichkeit.md  sprint_8_admin.md  wellen_datenquelle_pruefung.md
alembic/: env.py
api/: index.py  requirements.txt
app/: config.py  main.py
data/: history.json
docs/: pitch-deck.html  spot-datenmodell.html
frontend/: .env.example  .env.production  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
photos/: README.txt
scripts/: backup.sh  entrypoint.sh  init-test-db.sql  verify_content.py
tests/: conftest.py  era5_helpers.py  live_helpers.py  search_helpers.py  test_account.py  test_admin_api.py  test_admin_core.py  test_admin_dashboard.py  test_admin_moderation.py  test_api.py  test_auth.py  test_batch_cell_siblings.py  test_batch_content.py  test_categories.py  test_community.py  test_consensus.py  test_discovery_featured.py  test_discovery_warmup.py  test_era5_core.py  test_geo.py  (+18 more)
(+280 files in other folders)
