[project]
name = "surfwinddate"
version = "0.1.0"
description = "Backend for a watersport spot and trip-planning platform (Sprint 1: data foundation)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.setuptools.packages.find]
include = ["app*"]
